<resources>
    <!-- <string name="base_url">http://192.168.0.16:3000</string> -->
     <string name="base_url">http://applica-applica.44fs.preview.openshiftapps.com</string>
    <!-- <string name="base_url">http://192.168.43.93:3000</string> -->
    <string name="app_name">Applica</string>
    <string name="toolbar_section_name">[Section Name]</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Applica</string>
    <string name="notification_content">Não se esqueça de tomar a sua vacina</string>

    <string name="id_label">The Id is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">Name</string>
    <string name="content_value">[content]</string>

    <string name="aplicacao_item_vacina">Hepatite B</string>
    <string name="aplicacao_item_dose">1ª Dose</string>
    <string name="aplicacao_item_data">30/11/2016</string>
    //Card:

    <string name="cardeneta_nome_value">[nome]</string>
    <string name="cardeneta_sobrenome_value">[sobrenome]</string>
    <string name="cardeneta_sexo_value">[sexo]</string>

    <string name="title_activity_splash">Applica</string>
    <string name="dummy_content">APPLICA</string>
    <string name="title_activity_main_nav">Splash</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="choose_date_or_time">Lembrete</string>

    <string-array name="nav_item_activity_titles">
        <item>Minhas cardenetas</item>
        <item>Explorar</item>
        <item>Algo</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

</resources>
