<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/cardeneta_view_nome"
        android:text="@string/cardeneta_nome_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/cardeneta_view_sobrenome"
        android:text="@string/cardeneta_sobrenome_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/cardeneta_view_sexo"
        android:text="@string/cardeneta_sexo_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>