<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="2dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        >

        <TextView
            android:id="@+id/aplicacao_item_vacina"
            android:textSize="20dp"
            android:text="@string/aplicacao_item_vacina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/aplicacao_item_dose"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="20dp"
            android:text="@string/aplicacao_item_dose"
            android:layout_toRightOf="@+id/aplicacao_item_vacina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:layout_below="@+id/aplicacao_item_vacina"
            android:layout_marginTop="20dp"
            android:textSize="12dp"
            android:id="@+id/aplicacao_item_data"
            android:text="@string/aplicacao_item_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <!--
        <ImageButton
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_popup_sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        -->
    </RelativeLayout>
    <RelativeLayout
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="match_parent">
        <ToggleButton
            android:id="@+id/turnon_alarme"
            android:background="@drawable/ic_notification_off"
            android:backgroundTint="@color/black_overlay"
            android:layout_centerVertical="true"
            android:textOff=""
            android:textOn=""
            android:layout_marginRight="10dp"
            android:layout_width="40sp"
            android:layout_height="40sp" />
    </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>